# eternitas-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  admin_dashboard.py  cargo_dashboard.py  crew_dashboard.py  docker-compose.dashboard.yaml  docker-compose.yaml  main.py  pyproject.toml  registration_dashboard.py
.streamlit/: config.toml
admin_pages/: admin_api.py  crew_status.py  equipments.py  patterns.py  reisolation.py  reset.py  runners.py  workflow.py  works.py
pages/: cargo.py  crew.py  home.py
src/: config.py  database.py  main.py  scheduler.py  schema.py
src/admin/: router.py
src/common/: schema.py  utils.py
src/precursors/: models.py  router.py  service.py
src/reisolation/: models.py  router.py  schema.py  service.py
src/reisolation/services/: a125.py  base.py  registry.py
src/runners/: cargo.py  crew.py  equipment.py  models.py  router.py  schema.py  status_effect.py
src/train/: models.py  router.py
src/works/: models.py  router.py  schema.py  service.py  worker.py
src/works/services/: a125.py  b156.py  base.py  registry.py
