[project]
name = "eternitas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "apscheduler>=3.11.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.8",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
    "google>=3.0.0",
    "streamlit>=1.40.0",
]
